# modbus_data_collection

./: .gitignore  Cargo.toml  README.md
src/: gems_3500_memory_map.csv  main.rs
src/files/: gas.csv  gems.csv  gems_3500_memory_map.csv  heat.csv  iaq.csv
src/model/: modbus_register_models.rs
src/model/gas/: data_models.rs
src/model/gems_3005/: data_models.rs  gems_3500_memory_map_models.rs
src/model/heat/: data_models.rs
src/model/iaq/: data_models.rs
src/model/modbus/: modbus_register_models.rs
src/service/: interpret_modbus_register.rs  read_from_register.rs
src/service/collect/: gas.rs  gems_3500_modbus.rs  heat.rs  modbus_collect.rs
src/service/read/: interpret_modbus_register.rs  read_from_addr.rs  read_from_register.rs
src/service/read/iaq/: util_funcs.rs
src/service/server/: get_state.rs  server_init.rs  udp_listener.rs
src/service/task/: common_scheduling.rs  task_init.rs
src/service/utils/: create_time.rs  setup_log_file.rs
