[package]
name = "modbus_data_collection"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[dependencies]
tokio = { version = "1.44.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-modbus = "0.16.1"

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }

reqwest = { version = "0.12.15", default-features = false, features = [
    "http2",
    "charset",
    "macos-system-configuration",
    "json",
    "rustls-tls",
] }

axum = { version = "0.8.1", default-features = false, features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "macros",
    "ws",
] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = "1.0.219"
serde_derive = "1.0.219"

anyhow = "1.0.96"
futures = "0.3.31"
csv = "1.3.1"
chrono = { version = "0.4.40", features = ["serde"] }
dashmap = "7.0.0-rc2"
uuid = { version = "1.16.0", features = ["serde", "fast-rng", "v4"] }